--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "jojo",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "@babel/core": "^7.5.5",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
     "rxjs": "^6.5.2"
