--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "learning gulp usage-api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp start"
   },
   "author": "jojo",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "chalk": "^2.4.2",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-uglify": "^3.0.2"
